# RTED

./: .gitattributes  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/flamapp/rtedv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/flamapp/rtedv/: MainActivity.kt  YuvToMatConverter.kt
app/src/main/java/com/flamapp/rtedv/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/flamapp/rtedv/: ExampleUnitTest.kt
gl/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
jni/: build.gradle.kts
jni/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  OpenCVProcessor.cpp  OpenCVProcessor.h
jni/src/main/java/com/flamapp/jni/: NativeProcessor.kt
